<resources>
    <string name="app_name">Ubicúnate Perú</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android@studio.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- MENU -->

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_location">Vaccination places</string>
    <string name="menu_reminder">Add reminder</string>
    <string name="menu_statistics">See stats</string>
    <string name="menu_favorites">Favorite places</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_logout">Log out</string>

    <!-- END MENU -->

    <!-- CONSTANTS -->

    <string name="preferences_file_key">UbicunatePeru_Preferences</string>
    <string name="user_token_key">UbicunatePeru_UserToken</string>
    <string name="department_key">UbicunatePeru_Department</string>
    <string name="province_key">UbicunatePeru_Province</string>
    <string name="label_location_key">UbicunatePeru_LabelLocation</string>
    <string name="latitude_key">UbicunatePeru_Latitude</string>
    <string name="longitude_key">UbicunatePeru_Longitude</string>

    <!-- END CONSTANTS -->



    <!-- LABELS -->

    <!-- LOGIN -->

    <string name="title_login">Find your vaccination site!</string>

    <string name="email_input_label">E-Mail</string>
    <string name="pwd_input_label">Password</string>
    <string name="forgot_pwd_label">Did you forget your password?</string>

    <string name="register_label">You do not have an account?</string>

    <string name="log_login_btn">LOG IN</string>
    <string name="log_register_btn">SIGN IN</string>
    <string name="free_access_btn">CONTINUE WITHOUT REGISTRATION</string>

    <!-- REGISTER -->

    <string name="name_input_label">Full Names</string>
    <string name="phone_input_label">Phone</string>

    <string name="login_label">Do you already have an account?</string>

    <string name="reg_login_btn">LOG IN</string>
    <string name="reg_register_btn">SIGN IN</string>
    
    <!-- HOME -->
    
    <string name="title_home_toolbar">Good Morning!</string>
    <string name="header_home">Today</string>
    <string name="footer_home">people will be vaccinated</string>
    <string name="mid_message_home">And you, have you already vaccinated?</string>
    <string name="help_message_home">We will help you find vaccination sites near your location</string>
    <string name="see_more_home">SEE MORE</string>

    <!-- END LABELS -->

    <!-- PROFILE -->

    <string name="name_profile_hint">Full Names</string>
    <string name="phone_profile_hint">Phone</string>
    <string name="email_profile_hint">E-Mail</string>
    <string name="update_profile_button">UPDATE</string>
    <string name="or_option_profile_label">or update your password</string>
    <string name="password_profile_hint">Password</string>
    <string name="new_password_profile_hint">New Password</string>
    <string name="change_password_profile_button">CHANGE PASSWORD</string>

    <!-- END PROFILE -->

</resources>