<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_top_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vaccination_locations"
            android:icon="@drawable/ic_location_on"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_insights"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/menu_profile" />
    </group>
    <group android:id="@+id/nav_bottom_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/menu_logout" />
    </group>
</menu>