<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.register.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:src="@drawable/ic_auth_bg_top"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:src="@drawable/ic_auth_bg_left"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="180dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_icon_ubicunate"/>

            <EditText
                android:id="@+id/input_name_register"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp"
                android:inputType="text"
                android:hint="@string/name_input_label"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="16dp"
                style="@style/ubicunate_outline_primary_input"/>

            <EditText
                android:id="@+id/input_phone_register"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="8dp"
                android:inputType="phone"
                android:hint="@string/phone_input_label"
                android:drawableStart="@drawable/ic_phone_android"
                android:drawablePadding="16dp"
                style="@style/ubicunate_outline_primary_input"/>

            <EditText
                android:id="@+id/input_email_register"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="32dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_input_label"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                style="@style/ubicunate_outline_primary_input"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp">

                <EditText
                    android:id="@+id/input_pwd_register"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:inputType="textPassword"
                    android:hint="@string/pwd_input_label"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    style="@style/ubicunate_outline_primary_input"/>

                <ImageButton
                    android:id="@+id/reg_btn_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_visibility"/>

            </FrameLayout>

            <Button
                android:id="@+id/reg_btn_register"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/reg_register_btn"
                style="@style/ubicunate_flat_primary_button"/>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="12dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/primary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_gravity="center"
                    android:text="@string/login_label"
                    android:textAlignment="center"
                    style="@style/ubicunate_bold_primary_label"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/primary"/>

            </LinearLayout>

            <Button
                android:id="@+id/reg_btn_login"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/reg_login_btn"
                style="@style/ubicunate_stroked_primary_button"/>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_btn_free_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
        android:text="@string/free_access_btn"
        style="@style/ubicunate_secondary_button"/>

</FrameLayout>