<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg_fragment"
    tools:context=".ui.fragment.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="180dp"
            android:paddingBottom="40dp">

            <EditText
                android:id="@+id/input_name_profile"
                style="@style/ubicunate_outline_primary_input"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="16dp"
                android:hint="@string/name_profile_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_phone_profile"
                style="@style/ubicunate_outline_primary_input"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_phone_android"
                android:drawablePadding="16dp"
                android:hint="@string/phone_profile_hint"
                android:inputType="phone" />

            <EditText
                android:id="@+id/input_email_profile"
                style="@style/ubicunate_outline_primary_input"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginHorizontal="32dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:hint="@string/email_profile_hint"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/act_btn_profile"
                style="@style/ubicunate_flat_primary_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/update_profile_button" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="12dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/primary"/>

                <TextView
                    style="@style/ubicunate_bold_primary_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="@string/or_option_profile_label"
                    android:textAlignment="center" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/primary"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp">

                <EditText
                    android:id="@+id/input_pwd_profile"
                    style="@style/ubicunate_outline_primary_input"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/password_profile_hint"
                    android:inputType="textPassword" />

                <ImageButton
                    android:id="@+id/ac_btn_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_visibility"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp">

                <EditText
                    android:id="@+id/input_new_pwd_profile"
                    style="@style/ubicunate_outline_primary_input"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/new_password_profile_hint"
                    android:inputType="textPassword" />

                <ImageButton
                    android:id="@+id/ac_new_btn_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_visibility"/>

            </FrameLayout>

            <Button
                android:id="@+id/ac_btn_new_password"
                style="@style/ubicunate_flat_primary_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:minHeight="50dp"
                android:text="@string/change_password_profile_button" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitEnd"
            android:layout_marginTop="-80dp"
            android:src="@drawable/ic_main_toolbar_rounded_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/menu_profile"
            style="@style/ubicunate_title_fragment"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_bg_circle_image_toolbar"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:src="@drawable/mascarilla_protectora_1"/>

    </FrameLayout>
</FrameLayout>